Issue #20: When marking a category as read, it is removed from the visible tree

--- a/style/style.scss
+++ b/style/style.scss
@@ -288,7 +288,7 @@ input[type=text], input[type=password] {
 		animation: slideInRight $fast;
 	}
 
-	&.headlines-view-back.ng-enter, &.categories-view-back.ng-enter {
+	&.headlines-view-back.ng-enter {
 		animation: slideInLeft $fast;
 	}
 
